--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <div class="right-btn"><a href="#" class="primary-btn">VIew all</a></div>
+                    <div class="right-btn"><a href="./viewmore.html" class="primary-btn">VIew all</a></div>
                 </div>
             </div>
             <div class="categories-slider owl-carousel">
